# AI-develop-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  RULES.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: CI.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  STATUS.md  WORKFLOW.md
docs/architectures/: index.md  llm-native.md  ml-backend.md  ml-pipeline.md  mobile-app.md  web-app.md
docs/design-docs/: core-beliefs.md  index.md  repo-topology.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/: README.md
docs/product-specs/: feature-template.md  index.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
scripts/: install_git_hooks.sh  lint_repo_rules.py
src/: README.md
src/domains/: README.md
src/providers/: README.md
tests/: test_template.py
